<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/lib/com.google.ads"
    android:id="@+id/linearLayout4"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context=".PurchaseActivity" >

        <ProgressBar
            android:id="@+id/progressBarSearching"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="182dp" />

        <TextView
            android:id="@+id/textViewLocationLbl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/editTextOther"
            android:text="@string/location" />

        <Button
            android:id="@+id/buttonRecordPurchase"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editTextAmount"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:text="@string/record_purchase"
            android:visibility="gone" />

        <EditText
            android:id="@+id/editTextOther"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/textViewLocationLbl"
            android:ems="10"
            android:inputType="text"
            android:visibility="invisible" />

        <EditText
            android:id="@+id/editTextAmount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textViewAmountLbl"
            android:layout_below="@+id/textViewAmountLbl"
            android:ems="10"
            android:inputType="numberDecimal" >

            <requestFocus />
        </EditText>

        <TextView
            android:id="@+id/textViewAmountLbl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/editTextOther"
            android:layout_below="@+id/editTextOther"
            android:layout_marginTop="32dp"
            android:paddingTop="10dp"
            android:text="@string/amount" />

        <Spinner
            android:id="@+id/spinner1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/editTextOther"
            android:layout_below="@+id/textViewLocationLbl" />
    </RelativeLayout>
    
    <com.google.ads.AdView
        xmlns:googleads="http://schemas.android.com/apk/lib/com.google.ads"
        android:id="@+id/ad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        ads:adSize="BANNER"
        ads:testDevices="D5C71E654ACB04863E664691D781E661"
        ads:adUnitId="@string/admob_id"
        ads:loadAdOnCreate="true" >
    </com.google.ads.AdView>

</LinearLayout>